# Retrodict

./: .gitignore  CLAUDE.md  README.md  experiments.md  pyproject.toml
.plans/: 01-rgb-style-pilot.md  02-hypothesis-verification.md  03-ewm-consolidation.md  04-perception-and-log-helpers.md
docs/: baseline1-per-game-costs.md  baseline1-per-game-level-costs.md  explore-before-you-solve-implications.md  official-scorecard-8d734689.json  per-game-costs.md  per-game-level-costs.md  progress.md  rhae-v3-vs-pre-v3.md  run-comparisons.md  uv-pip-show-arc-agi.txt
docs/archive/: 2026-07-14-gpt-5.6-sol-high.md
docs/diagrams/: retrodict-architecture.drawio
scripts/: gen_baseline1_game_costs.py  gen_baseline1_level_costs.py  gen_game_costs.py  gen_level_costs.py  replay_runs.py  setup_analysis_venv.sh  stage_release_runs.py
src/arc3/: logwriter.py  plan_parser.py  prompts.py  runner.py  tools.py  vision.py
tests/: conftest.py  test_arclog.py  test_live_cache.py  test_logwriter.py  test_plan_parser.py  test_prompts.py  test_runner.py  test_tools.py
tests/fixtures/: perception_log.txt
workspace_template/: arclog.py
workspace_template/scratch/: __init__.py
